# tav

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
src/tav/: __init__.py  app.py  cli.py  loader.py  query.py  stats.py  store.py  time_detect.py  time_parse.py  types.py
src/tav/screens/: __init__.py  data_view.py  stats_view.py
src/tav/widgets/: __init__.py  command_bar.py  field_nav.py  field_selector.py  help_overlay.py  record_detail.py  record_list.py
tests/: __init__.py  conftest.py  fixtures.py  test_cli.py  test_data_view.py  test_field_nav.py  test_field_selector.py  test_loader.py  test_query.py  test_record_list.py  test_stats.py  test_stats_view.py  test_store.py  test_time_detect.py  test_time_parse.py
tests/fixtures/: sample.jsonl
