[project]
name = "tav"
version = "0.1.0"
description = "Terminal viewer for JSONL time-series data"
requires-python = ">=3.12"
dependencies = [
    "textual>=2.0.0",
    "jsonpath-ng>=1.6.0",
]

[project.scripts]
tav = "tav.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tav"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
